--- a/hola_player/holaplayer/src/main/res/menu/settings.xml
+++ b/hola_player/holaplayer/src/main/res/menu/settings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/powered_by_hola" android:icon="@drawable/ic_hola"
+        android:showAsAction="collapseActionView" android:title=""
+        android:actionViewClass="android.view.View">
+    </item>
     <item android:id="@+id/quality_menu_item" android:title="@string/quality"
         android:icon="@drawable/ic_gear">
         <menu></menu>
