--- a/hola_player/holaplayer/src/main/res/values/styles.xml
+++ b/hola_player/holaplayer/src/main/res/values/styles.xml
@@ -36,16 +36,16 @@
         <item name="android:paddingLeft">4dp</item>
     </style>
     <style name="HolaMenuButton">
-        <item name="android:layout_width">32dp</item>
-        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:src">@drawable/ic_menu</item>
         <item name="android:contentDescription">@string/hola_menu_description</item>
     </style>
     <style name="HolaFullscreenButton">
-        <item name="android:layout_width">24dp</item>
-        <item name="android:layout_height">24dp</item>
-        <item name="android:layout_marginLeft">6dp</item>
+        <item name="android:layout_width">32dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:padding">4dp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:src">@drawable/ic_fullscreen</item>
         <item name="android:scaleType">fitCenter</item>
@@ -56,17 +56,11 @@
         <item name="android:layout_gravity">top</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:gravity">right</item>
-        <item name="android:paddingTop">6dp</item>
-        <item name="android:paddingLeft">4dp</item>
-        <item name="android:paddingRight">4dp</item>
     </style>
     <style name="HolaBottomBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">bottom</item>
-        <item name="android:paddingBottom">8dp</item>
         <item name="android:paddingLeft">16dp</item>
-        <item name="android:paddingRight">10dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:orientation">horizontal</item>
     </style>
