--- a/hola_player/holaplayer/src/main/res/values/styles.xml
+++ b/hola_player/holaplayer/src/main/res/values/styles.xml
@@ -64,4 +64,11 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:orientation">horizontal</item>
     </style>
+    <style name="HolaLiveControl">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/live</item>
+        <item name="android:textColor">#FFFFFFFF</item>
+        <item name="android:paddingLeft">8dp</item>
+    </style>
 </resources>
