--- a/hola_player/holaplayerdemo/src/main/res/layout/main_activity.xml
+++ b/hola_player/holaplayerdemo/src/main/res/layout/main_activity.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:keepScreenOn="true">
-    <TextView
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="HolaSpark" />
+    android:keepScreenOn="true"
+    android:layout_margin="5dp">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_marginTop="15dp" android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+        <ImageView android:layout_width="260dp" android:layout_height="wrap_content"
+            android:adjustViewBounds="true" android:src="@drawable/spark_logo" />
+        <TextView android:layout_width="wrap_content" android:layout_gravity="bottom"
+            android:layout_height="wrap_content" android:text="@string/demo_app"
+            android:textColor="@color/black" android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp" android:textStyle="bold" android:textSize="18sp"/>
+    </LinearLayout>
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
